# rqt_custom_plugin

./: README.md  package.xml  plugin.xml  setup.cfg  setup.py
resource/: MyPlugin.ui
rqt_custom_plugin/: main.py  my_module.py
